@@ -16,8 +16,8 @@
 			</last>
 		</scripts>
 		<sql>
-			<db>473</db>
-			<file>473</file>
+			<db>474</db>
+			<file>474</file>
 		</sql>
 	</versions>
 </nzedb>
